# dbt-cmake-test

./: .gitignore  CMakeLists.txt  MODULE  README.md
pkg/: BUILD.go  CMakeLists.txt  header.h  main.c
